--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 rand = "0.8.4"
+tokio = { version = "1", features = ["full"] }
+warp = "0.3"
