--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde_json = "1.0"
 rand = "0.8.4"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
+log = "0.4.22"
+env_logger = "0.11.5"
